# explorecpp

./: CMakeLists.txt  README.md  lsl_integration.md  windows_installation.md
examples/: CMakeLists.txt  README.md  fileinput.cpp  lsl_integration.cpp  sample.cpp
examples/forward/: CMakeLists.txt  forward_class.cpp
examples/parser/: CMakeLists.txt  binary_dump.cpp
include/: acquisition_server.h  base.h  data_parser.h  data_structs.h  explore.h  forward.h  parsed_structs.h  parser.h
include/docs/: acquisition_server.md  forward.md  parser.md
include/io/: fileio.h  serial.h
